[package]
name = "game-gdnative"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
colorgrad = "0.6.2"
gdnative = { version = "0.11", features = ["serde"] }
lazy_static = "1.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.17"
