[package]
name = "game-gdnative"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
colorgrad = "0.6.2"
gdnative = { version = "0.11", features = ["serde"] }
itertools = "0.10.5"
lazy_static = "1.4.0"
phf = "0.11.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.17"

[build-dependencies]
anyhow = "1.0.69"
itertools = "0.10.5"
phf_codegen = "0.11.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
walkdir = "2.3.2"
